# qtitanribbon-cmake-skeleton

./: .gitignore  CMakeLists.txt  readme.md
examples/: CMakeLists.txt  example_setup.cmake
examples/ribbon/Application/: CMakeLists.txt
examples/ribbon/BackstageView/: CMakeLists.txt
examples/ribbon/ControlsDemo/: CMakeLists.txt
examples/ribbon/ToolBarControlDemo/: CMakeLists.txt
lib/: CMakeLists.txt  component_base.cmake  component_fastinfoset.cmake  component_ribbon.cmake  component_styles.cmake  component_translations.cmake  external.cmake  qtitanribbon-config.cmake
